Add basic anki jinja2 exported, add html tags, fix synonyms

--- a/templates/slovari/back.jinja2
+++ b/templates/slovari/back.jinja2
@@ -1,13 +1,14 @@
+<meta charset="UTF-8">
 {% set limit=3 %}
-{{slovariword.wordfrom}} {{slovariword.transcription}}
+<div class="word"><span class="wordfrom">{{slovariword.wordfrom}}</span> <span class="transcription">{{slovariword.transcription}}</span></div>
 {% for part_of_speech, entries in slovariword.groups[:limit] %}
-{{part_of_speech}}
+<div class="partofspeech">{{part_of_speech}}</div>
 {% for wordto, examples in entries[:limit] %}
-= {{wordto}}
+<div class="wordto">= {{wordto}}</div>
 {% for synonyms, examplefrom, exampleto in examples[:limit] %}
-{% if synonyms %}{{synonyms}}
+{% if synonyms %}<div class="synonym">{{synonyms}}</div>
 {% endif %}
-{% if examplefrom %} {{examplefrom}} — {{exampleto}}
+{% if examplefrom %}<div class="example"><span class="examplefrom">{{examplefrom}}</span> — <span class="exampleto">{{exampleto}}</span></div>
 {% endif %}
 {% endfor %}
 {% endfor %}
