--- a/yatetradki/uitools/ordbok-inflect.css
+++ b/yatetradki/uitools/ordbok-inflect.css
@@ -6,7 +6,8 @@ th {
     border-bottom: 1px solid #557FBD;
     border-top: 1px solid #557FBD;
     text-align: center;
-    padding: 6px 6px 6px 12px;
+    /* padding: 6px 6px 6px 12px; */
+    padding: 1px 1px 1px 1px;
 }
 td {
     font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
@@ -14,6 +15,7 @@ td {
     border-right: 1px solid #557FBD;
     border-bottom: 1px solid #557FBD;
     background: #fff;
-    padding: 6px 6px 6px 12px;
+    /* padding: 6px 6px 6px 12px; */
+    padding: 1px 1px 1px 1px;
     text-align: center;
 }
