--- a/yatetradki/uitools/ordbok/static/css/aulismedia.css
+++ b/yatetradki/uitools/ordbok/static/css/aulismedia.css
@@ -1,3 +1,12 @@
+img {
+    height: auto;
+    width: auto;
+    max-width:1200px;
+    max-height:1200px;
+}
+#imgdiv {
+    width: 100%;
+}
 .container {
 }
 .panel {
