--- a/yatetradki/uitools/ordbok/static/css/glosbe-style.css
+++ b/yatetradki/uitools/ordbok/static/css/glosbe-style.css
@@ -12,3 +12,14 @@
 div.tmem__item__meta.trufla {
     display: none !important;
 }
+.mt-4 {
+    margin: 0 !important;
+}
+.py-2 { padding-bottom: 0 !important; }
+div.py-2 + div.flex { display: none !important; }
+#translation_automatic { display: none !important; }
+#indirect-translations-container-0 { display: none !important; }
+div.p-2 { display: none !important; }
+div.dir-aware-text-right { display: none !important; }
+div.px-1.pb-4 { display: none !important; }
+[data-element="no-translations"] { display: none !important; }
