--- a/yatetradki/uitools/ordbok/static/css/glosbe-style.css
+++ b/yatetradki/uitools/ordbok/static/css/glosbe-style.css
@@ -15,8 +15,9 @@ div.tmem__item__meta.trufla {
 .mt-4 {
     margin: 0 !important;
 }
+.pt-1 { padding: 0 !important; }
 .py-1 { padding: 0 !important; }
-.py-2 { padding-bottom: 0 !important; }
+.py-2 { padding: 0 !important; }
 div.py-2 + div.flex { display: none !important; }
 #translation_automatic { display: none !important; }
 #indirect-translations-container-0 { display: none !important; }
