ordbok_uib_no: use stateful deepl for faster translation

--- a/yatetradki/uitools/ordbok/static/css/iframe.css
+++ b/yatetradki/uitools/ordbok/static/css/iframe.css
@@ -44,6 +44,9 @@ div::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
     width: 0 !important;
 }
+.height33 {
+    height: 33%;
+}
 .fullw {
     width: 100%;
 }
